--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="uk">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Студия</title>
 </head>
+
 <body>
     <!--шапка профиля с навигацией-->
     <header>
-        <a href="/"><span>WebStudio</span></a>
+        <a href="/" lang="en">WebStudio</a>
         <nav>
             <ul>
                 <li><a href="">Студія</a></li>
@@ -17,10 +19,10 @@
                 <li><a href="">Контакти</a></li>
             </ul>
         </nav>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
     </header>
     <main>
         <!--Блок-герой-->
@@ -29,6 +31,7 @@
             <button type="button">Замовити послугу</button>
         </section>
         <section>
+            <h2 hidden>Invisible title</h2>
             <ul>
                 <li>
                     <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -44,7 +47,7 @@
                 </li>
                 <li>
                     <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                        <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
             <h2>Чим ми займаємося</h2>
@@ -87,16 +90,16 @@
         </section>
     </main>
     <footer>
-        <a href="/"><span>WebStudio</span></a>
+        <a href="/" lang="en">WebStudio</a>
         <address>
             <ul>
-                <li>
-                    м. Київ, пр-т Лесі Українки, 26
-                </li>
+                <li><a href="https://goo.gl/maps/9GgxLfYpcewbCLix5" target="_blank"
+                        rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
 </body>
+
 </html>
