Изменен атрибут hidden в заголовке

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <button type="button">Замовити послугу</button>
         </section>
         <section>
-            <h2 hidden>Invisible title</h2>
+            <h2 class="hidden">Наші переваги</h2>
             <ul>
                 <li>
                     <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -69,22 +69,22 @@
                 <li>
                     <img src="./images/productdesigner.jpg" width="270" alt="Продуктовий дизайнер">
                     <h3>Ігор Дем'яненко</h3>
-                    <p>Product Designer</p>
+                    <p lang="en">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/frontend.jpg" width="270" alt="Фронтенд розробник">
                     <h3>Ольга Рєпіна</h3>
-                    <p>Frontend Developer</p>
+                    <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/marketing.jpg" width="270" alt="Маркетинг">
                     <h3>Микола Тарасов</h3>
-                    <p>Marketing</p>
+                    <p lang="en">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/uidesigner.jpg" width="270" alt="Дизайнер інтерфейсу користувача">
                     <h3>Михайло Єрмаков</h3>
-                    <p>UI Designer</p>
+                    <p lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
